--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,13 @@
 .env.local
 .env.production
 .env.development
+backend/.env
+frontend/.env
 
 # Dependencies
 node_modules/
+backend/node_modules/
+frontend/node_modules/
 
 # Logs
 logs/
@@ -25,6 +29,9 @@ Thumbs.db
 # Build outputs
 dist/
 build/
+backend/dist/
+frontend/dist/
+frontend/build/
 
 # Testing
 coverage/
@@ -33,3 +40,4 @@ coverage/
 # Temporary files
 *.tmp
 temp/
+diagnostic.log
