--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,21 @@
+# Server Configuration
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/FixIt
+
+# Database Configuration
+# For local development:
+# MONGO_URI=mongodb://localhost:27017/FixIt
+
+# For MongoDB Atlas (Cloud):
+MONGO_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database>?retryWrites=true&w=majority
+
+# JWT Secret (use a strong random string in production)
 JWT_SECRET=your_secret_key_here_replace_with_secure_random_string
+
+# CORS Configuration
+# For development (allows all origins):
+# FRONTEND_URL=*
+# For production (specify your frontend URL):
+# FRONTEND_URL=https://your-frontend-domain.com
 
 # Admin Setup (for createAdmin.js script)
 # Uncomment and set these in your .env when creating admin user
